Fixed spacing on contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,8 @@
     }
 
     #contact {
-        padding-top: 40px;
+        padding-top: 25vh;
+        padding-bottom: 25vh;
     }
     
     #phoneNumber {
